--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <body>
         <h3>RUN BUDDY</h3>
 
-        What We Do 
+        What We Do What You Do Your Trainers Reach Out
     </body>
 </html>
