--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <h1>
                 <a href="/">RUN BUDDY</a> 
             </h1>
-
             <nav>
                 <!-- Unordered list element -->
                 <ul>
@@ -43,7 +42,6 @@
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
-
                 <!-- Add form Element -->
                 <form>
                     <label for="name">Enter full name:</label>
@@ -89,7 +87,6 @@
         <!-- 'what you do' section -->
         <section id="what-you-do" class="steps">
             <h2 class="section-title secondary-border">What You Do</h2>
-
             <div>
                 <img src="./assets/images/step-1.svg" alt=""/>
                 <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -116,8 +113,46 @@
         </section>
 
         <!-- 'meet the trainers' section -->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <!-- First Trainer -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Aaron Stephens in his workout clothes, ready to pump iron">
+                <div class="trainer-bio text-left">
+                    <h3>Aaron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                    </p>
+                </div>
+            </article>
+
+            <!-- Second Trainer -->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
+            </article>
+
+            <!-- Third Trainer -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights">
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!-- 'reach out' section -->
@@ -128,7 +163,6 @@
         <!-- footer -->
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
-
             <div>
                 <a href="#">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
