--- a/index.html
+++ b/index.html
@@ -21,15 +21,12 @@
                         <!-- Anchor element -->
                         <a href="#what-we-do">What We Do</a>
                     </li>
-
                     <li>
                         <a href="#what-you-do">What You Do</a>
                     </li>
-
                     <li>
                         <a href="#your-trainers">Your Trainers</a>
                     </li>
-
                     <li>
                         <a href="#reach-out">Reach Out</a>
                     </li>
@@ -187,7 +184,7 @@
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
             <div>
-                <a href="#">Read Our Privacy Policy</a><br />
+                <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
             </div>
         </footer>
