--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
                         <input type="checkbox" name="age-confirm" id="checkbox">
                     </p>
 
-                    <button type="submit">
-                        Get Running!
-                    </button>
+                    <button type="submit"> Get Running!</button>
                 </form>
             </div>
         </section>
