--- a/index.html
+++ b/index.html
@@ -168,6 +168,17 @@
                 referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
                 <div>
+                    <h3>Contact Us</h3>
+                    <form action="">
+                        <label for="contact-name">Your name</label>
+                        <input type="text" name="" id="contact-name" placeholder="Your Name">
+
+                        <label for="contact-message">Message</label>
+                        <textarea name="" id="contact-message" cols="30" rows="10" placeholder="Message"></textarea>
+                    </form>
+                </div>
+                
+                <div>
                     <h3>Run Buddy</h3>
                     <p>
                         Any questions or concerns before signing up?
