added flexboxes to the contact section

--- a/index.html
+++ b/index.html
@@ -207,25 +207,8 @@
             <div class="flex-row">
                 <h2 class="section-title secondary-border">Reach Out</h2>
             </div>
-            
-            <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3232.646722964365!2d-83.45173054858552!3d35.88217338005063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x885bfaeec108b2d9%3A0xa31727c6d9635bec!2s269%20New%20Center%20Rd%2C%20Sevierville%2C%20TN%2037876!5e0!3m2!1sen!2sus!4v1650031557358!5m2!1sen!2sus" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-                <div>
-                    <h3>Contact Us</h3>
-                    <form action="">
-                        <label for="contact-name">Your name</label>
-                        <input type="text" name="" id="contact-name" placeholder="Your Name">
 
-                        <label for="contact-message">Message</label>
-                        <textarea name="" id="contact-message" cols="30" rows="10" placeholder="Message"></textarea>
-                    </form>
-                </div>
-                
+            <div class="contact-info">
                 <div>
                     <h3>Run Buddy</h3>
                     <p>
@@ -241,6 +224,24 @@
                         E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
                     </address>
                 </div>
+
+                <div class="contact-form">
+                    <h3>Contact Us</h3>
+                    <form action="">
+                        <label for="contact-name">Your name</label>
+                        <input type="text" name="" id="contact-name" placeholder="Your Name">
+
+                        <label for="contact-message">Message</label>
+                        <textarea name="" id="contact-message" cols="30" rows="10" placeholder="Message"></textarea>
+                    </form>
+                </div>
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3232.646722964365!2d-83.45173054858552!3d35.88217338005063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x885bfaeec108b2d9%3A0xa31727c6d9635bec!2s269%20New%20Center%20Rd%2C%20Sevierville%2C%20TN%2037876!5e0!3m2!1sen!2sus!4v1650031557358!5m2!1sen!2sus" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
         </section>
 
